# cli-micro-learner

./: .gitignore  AGENTS.md  AI_WORKFLOW_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  README.md  dev-plan.md  pyproject.toml
src/cli_micro_learner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/micro_learner/: __main__.py  llm.py  logic.py  main.py  repl.py  state.py  ui.py
tests/: test_interventions.py  test_llm.py  test_main.py  test_repl.py  test_state.py
